tests/snapshots/files__fib_recursive-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@fac(v0: int): int {
  c1_: int = const 0;
  v2_: bool = eq c1_ v0;
  c3_: int = const 1;
  v4_: int = id c3_;
  br v2_ .b5_ .b6_;
.b5_:
  ret v4_;
  jmp .b7_;
.b6_:
  v8_: bool = eq c3_ v0;
  br v8_ .b9_ .b10_;
.b9_:
  c11_: bool = const true;
  v12_: int = id v0;
  v13_: int = id v0;
  v4_: int = id v13_;
  ret v4_;
  jmp .b7_;
.b10_:
  v14_: int = sub v0 c3_;
  v15_: bool = eq c1_ v14_;
  v16_: int = id c3_;
  br v15_ .b17_ .b18_;
.b18_:
  v19_: bool = eq c3_ v14_;
  br v19_ .b20_ .b21_;
.b20_:
  c22_: bool = const true;
  v23_: int = id v14_;
  v24_: int = id v14_;
  v16_: int = id v24_;
.b17_:
  v25_: int = sub v14_ c3_;
  v26_: bool = eq c1_ v25_;
  v27_: int = id c3_;
  br v26_ .b28_ .b29_;
.b28_:
  v30_: int = add v16_ v27_;
  v13_: int = id v30_;
  v4_: int = id v13_;
  ret v4_;
  jmp .b7_;
.b29_:
  v31_: bool = eq c3_ v25_;
  br v31_ .b32_ .b33_;
.b32_:
  c34_: bool = const true;
  v35_: int = id v25_;
  v36_: int = id v25_;
  v27_: int = id v36_;
  v30_: int = add v16_ v27_;
  v13_: int = id v30_;
  v4_: int = id v13_;
  ret v4_;
  jmp .b7_;
.b33_:
  v37_: int = sub v25_ c3_;
  v38_: bool = eq c1_ v37_;
  v39_: int = id c3_;
  br v38_ .b40_ .b41_;
.b41_:
  v42_: bool = eq c3_ v37_;
  br v42_ .b43_ .b44_;
.b43_:
  v45_: int = call @fac c1_;
  v46_: int = id v37_;
  v39_: int = id v46_;
.b40_:
  v47_: int = sub v37_ c3_;
  v48_: bool = eq c1_ v47_;
  v49_: int = id c3_;
  br v48_ .b50_ .b51_;
.b50_:
  v52_: int = add v39_ v49_;
  v36_: int = id v52_;
  v27_: int = id v36_;
  v30_: int = add v16_ v27_;
  v13_: int = id v30_;
  v4_: int = id v13_;
  ret v4_;
  jmp .b7_;
.b51_:
  v53_: bool = eq c3_ v47_;
  br v53_ .b54_ .b55_;
.b54_:
  v56_: int = call @fac c1_;
  v57_: int = id v47_;
  v49_: int = id v57_;
  v52_: int = add v39_ v49_;
  v36_: int = id v52_;
  v27_: int = id v36_;
  v30_: int = add v16_ v27_;
  v13_: int = id v30_;
  v4_: int = id v13_;
  ret v4_;
  jmp .b7_;
.b55_:
  v58_: int = sub v47_ c3_;
  v59_: int = call @fac v58_;
  v60_: int = sub v58_ c3_;
  v61_: int = call @fac v60_;
  v62_: int = add v59_ v61_;
  v57_: int = id v62_;
  v49_: int = id v57_;
  v52_: int = add v39_ v49_;
  v36_: int = id v52_;
  v27_: int = id v36_;
  v30_: int = add v16_ v27_;
  v13_: int = id v30_;
  v4_: int = id v13_;
  ret v4_;
  jmp .b7_;
.b44_:
  v63_: int = sub v37_ c3_;
  v64_: int = call @fac v63_;
  v65_: int = sub v63_ c3_;
  v66_: int = call @fac v65_;
  v67_: int = add v64_ v66_;
  v46_: int = id v67_;
  v39_: int = id v46_;
  jmp .b40_;
.b21_:
  v68_: int = sub v14_ c3_;
  v69_: bool = eq c1_ v68_;
  v70_: int = id c3_;
  br v69_ .b71_ .b72_;
.b72_:
  v73_: bool = eq c3_ v68_;
  br v73_ .b74_ .b75_;
.b74_:
  v76_: int = call @fac c1_;
  v77_: int = id v68_;
  v70_: int = id v77_;
.b71_:
  v78_: int = sub v68_ c3_;
  v79_: bool = eq c1_ v78_;
  v80_: int = id c3_;
  br v79_ .b81_ .b82_;
.b82_:
  v83_: bool = eq c3_ v78_;
  br v83_ .b84_ .b85_;
.b84_:
  v86_: int = call @fac c1_;
  v87_: int = id v78_;
  v80_: int = id v87_;
.b81_:
  v88_: int = add v70_ v80_;
  v24_: int = id v88_;
  v16_: int = id v24_;
  jmp .b17_;
.b85_:
  v89_: int = sub v78_ c3_;
  v90_: int = call @fac v89_;
  v91_: int = sub v89_ c3_;
  v92_: int = call @fac v91_;
  v93_: int = add v90_ v92_;
  v87_: int = id v93_;
  v80_: int = id v87_;
  jmp .b81_;
.b75_:
  v94_: int = sub v68_ c3_;
  v95_: int = call @fac v94_;
  v96_: int = sub v94_ c3_;
  v97_: int = call @fac v96_;
  v98_: int = add v95_ v97_;
  v77_: int = id v98_;
  v70_: int = id v77_;
  jmp .b71_;
.b7_:
}
@main {
  c0_: int = const 2;
  c1_: int = const 0;
  v2_: bool = eq c0_ c1_;
  c3_: int = const 1;
  v4_: int = id c3_;
  br v2_ .b5_ .b6_;
.b5_:
  print v4_;
  ret;
  jmp .b7_;
.b6_:
  v8_: bool = eq c0_ c3_;
  br v8_ .b9_ .b10_;
.b9_:
  c11_: bool = const true;
  c12_: int = const 1;
  v13_: int = id c12_;
  v14_: int = id c0_;
  v4_: int = id v14_;
  print v4_;
  ret;
  jmp .b7_;
.b10_:
  v15_: bool = eq c1_ c3_;
  v16_: int = id c3_;
  br v15_ .b17_ .b18_;
.b18_:
  c19_: bool = const true;
  v20_: int = call @fac c1_;
  v21_: int = id c3_;
  v16_: int = id v21_;
.b17_:
  v22_: bool = eq c1_ c1_;
  v23_: int = id c3_;
  br v22_ .b24_ .b25_;
.b24_:
  v26_: int = add v16_ v23_;
  v14_: int = id v26_;
  v4_: int = id v14_;
  print v4_;
  ret;
  jmp .b7_;
.b25_:
  v27_: bool = eq c1_ c3_;
  br v27_ .b28_ .b29_;
.b28_:
  v30_: int = call @fac c1_;
  v31_: int = id c1_;
  v23_: int = id v31_;
  v26_: int = add v16_ v23_;
  v14_: int = id v26_;
  v4_: int = id v14_;
  print v4_;
  ret;
  jmp .b7_;
.b29_:
  c32_: int = const -1;
  v33_: int = call @fac c32_;
  c34_: int = const -2;
  v35_: int = call @fac c34_;
  v36_: int = add v33_ v35_;
  v31_: int = id v36_;
  v23_: int = id v31_;
  v26_: int = add v16_ v23_;
  v14_: int = id v26_;
  v4_: int = id v14_;
  print v4_;
  ret;
.b7_:
}
