tests/snapshots/files__fib_recursive-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@fac(v0: int): int {
  c1_: int = const 0;
  v2_: bool = eq c1_ v0;
  c3_: int = const 1;
  v4_: int = id c3_;
  br v2_ .b5_ .b6_;
.b5_:
  ret v4_;
  jmp .b7_;
.b6_:
  v8_: bool = eq c3_ v0;
  br v8_ .b9_ .b10_;
.b9_:
  v11_: bool = eq c1_ c1_;
  v12_: int = id v0;
  br v11_ .b13_ .b14_;
.b13_:
  v15_: int = id v0;
  v4_: int = id v15_;
  ret v4_;
  jmp .b7_;
.b14_:
  v16_: bool = eq c1_ v0;
  br v16_ .b17_ .b18_;
.b17_:
  v19_: bool = eq c1_ c1_;
  v20_: int = id c1_;
  br v19_ .b21_ .b22_;
.b21_:
  v23_: int = id c1_;
  v12_: int = id v23_;
  v15_: int = id v0;
  v4_: int = id v15_;
  ret v4_;
  jmp .b7_;
.b22_:
  v24_: bool = eq c1_ c1_;
  br v24_ .b25_ .b26_;
.b25_:
  v27_: int = call @fac c1_;
  v28_: int = id c1_;
  v20_: int = id v28_;
  v23_: int = id c1_;
  v12_: int = id v23_;
  v15_: int = id v0;
  v4_: int = id v15_;
  ret v4_;
  jmp .b7_;
.b26_:
  c29_: int = const -1;
  v30_: int = call @fac c29_;
  c31_: int = const -2;
  v32_: int = call @fac c31_;
  v33_: int = add v30_ v32_;
  v28_: int = id v33_;
  v20_: int = id v28_;
  v23_: int = id c1_;
  v12_: int = id v23_;
  v15_: int = id v0;
  v4_: int = id v15_;
  ret v4_;
  jmp .b7_;
.b18_:
  c34_: int = const -1;
  v35_: bool = eq c1_ c34_;
  v36_: int = id v0;
  br v35_ .b37_ .b38_;
.b38_:
  v39_: bool = eq c34_ v0;
  br v39_ .b40_ .b41_;
.b40_:
  v42_: int = call @fac c1_;
  v43_: int = id v0;
  v36_: int = id v43_;
.b37_:
  c44_: int = const -2;
  v45_: bool = eq c1_ c44_;
  v46_: int = id v0;
  br v45_ .b47_ .b48_;
.b47_:
  v49_: int = add v36_ v46_;
  v23_: int = id v49_;
  v12_: int = id v23_;
  v15_: int = id v0;
  v4_: int = id v15_;
  ret v4_;
  jmp .b7_;
.b48_:
  v50_: bool = eq c44_ v0;
  br v50_ .b51_ .b52_;
.b51_:
  v53_: int = call @fac c1_;
  v54_: int = id v0;
  v46_: int = id v54_;
  v49_: int = add v36_ v46_;
  v23_: int = id v49_;
  v12_: int = id v23_;
  v15_: int = id v0;
  v4_: int = id v15_;
  ret v4_;
  jmp .b7_;
.b52_:
  c55_: int = const -3;
  v56_: int = call @fac c55_;
  c57_: int = const -4;
  v58_: int = call @fac c57_;
  v59_: int = add v56_ v58_;
  v54_: int = id v59_;
  v46_: int = id v54_;
  v49_: int = add v36_ v46_;
  v23_: int = id v49_;
  v12_: int = id v23_;
  v15_: int = id v0;
  v4_: int = id v15_;
  ret v4_;
  jmp .b7_;
.b41_:
  c60_: int = const -2;
  v61_: int = call @fac c60_;
  c62_: int = const -3;
  v63_: int = call @fac c62_;
  v64_: int = add v61_ v63_;
  v43_: int = id v64_;
  v36_: int = id v43_;
  jmp .b37_;
.b10_:
  v65_: int = sub v0 c3_;
  v66_: bool = eq c1_ v65_;
  v67_: int = id c3_;
  br v66_ .b68_ .b69_;
.b69_:
  v70_: bool = eq c3_ v65_;
  br v70_ .b71_ .b72_;
.b71_:
  v73_: bool = eq c1_ c1_;
  v74_: int = id v65_;
  br v73_ .b75_ .b76_;
.b75_:
  v77_: int = id v65_;
  v67_: int = id v77_;
.b68_:
  v78_: int = sub v65_ c3_;
  v79_: bool = eq c1_ v78_;
  v80_: int = id c3_;
  br v79_ .b81_ .b82_;
.b81_:
  v83_: int = add v67_ v80_;
  v15_: int = id v83_;
  v4_: int = id v15_;
  ret v4_;
  jmp .b7_;
.b82_:
  v84_: bool = eq c3_ v78_;
  br v84_ .b85_ .b86_;
.b85_:
  v87_: bool = eq c1_ c1_;
  v88_: int = id v78_;
  br v87_ .b89_ .b90_;
.b89_:
  v91_: int = id v78_;
  v80_: int = id v91_;
  v83_: int = add v67_ v80_;
  v15_: int = id v83_;
  v4_: int = id v15_;
  ret v4_;
  jmp .b7_;
.b90_:
  v92_: bool = eq c1_ v78_;
  br v92_ .b93_ .b94_;
.b93_:
  v95_: int = call @fac c1_;
  v96_: int = id c1_;
  v88_: int = id v96_;
  v91_: int = id v78_;
  v80_: int = id v91_;
  v83_: int = add v67_ v80_;
  v15_: int = id v83_;
  v4_: int = id v15_;
  ret v4_;
  jmp .b7_;
.b94_:
  c97_: int = const -1;
  v98_: int = call @fac c97_;
  c99_: int = const -2;
  v100_: int = call @fac c99_;
  v101_: int = add v100_ v98_;
  v96_: int = id v101_;
  v88_: int = id v96_;
  v91_: int = id v78_;
  v80_: int = id v91_;
  v83_: int = add v67_ v80_;
  v15_: int = id v83_;
  v4_: int = id v15_;
  ret v4_;
  jmp .b7_;
.b86_:
  v102_: int = sub v78_ c3_;
  v103_: bool = eq c1_ v102_;
  v104_: int = id c3_;
  br v103_ .b105_ .b106_;
.b106_:
  v107_: bool = eq c3_ v102_;
  br v107_ .b108_ .b109_;
.b108_:
  v110_: int = call @fac c1_;
  v111_: int = id v102_;
  v104_: int = id v111_;
.b105_:
  v112_: int = sub v102_ c3_;
  v113_: bool = eq c1_ v112_;
  v114_: int = id c3_;
  br v113_ .b115_ .b116_;
.b115_:
  v117_: int = add v104_ v114_;
  v91_: int = id v117_;
  v80_: int = id v91_;
  v83_: int = add v67_ v80_;
  v15_: int = id v83_;
  v4_: int = id v15_;
  ret v4_;
  jmp .b7_;
.b116_:
  v118_: bool = eq c3_ v112_;
  br v118_ .b119_ .b120_;
.b119_:
  v121_: int = call @fac c1_;
  v122_: int = id v112_;
  v114_: int = id v122_;
  v117_: int = add v104_ v114_;
  v91_: int = id v117_;
  v80_: int = id v91_;
  v83_: int = add v67_ v80_;
  v15_: int = id v83_;
  v4_: int = id v15_;
  ret v4_;
  jmp .b7_;
.b120_:
  v123_: int = sub v112_ c3_;
  v124_: int = call @fac v123_;
  v125_: int = sub v123_ c3_;
  v126_: int = call @fac v125_;
  v127_: int = add v124_ v126_;
  v122_: int = id v127_;
  v114_: int = id v122_;
  v117_: int = add v104_ v114_;
  v91_: int = id v117_;
  v80_: int = id v91_;
  v83_: int = add v67_ v80_;
  v15_: int = id v83_;
  v4_: int = id v15_;
  ret v4_;
  jmp .b7_;
.b109_:
  v128_: int = sub v102_ c3_;
  v129_: int = call @fac v128_;
  v130_: int = sub v128_ c3_;
  v131_: int = call @fac v130_;
  v132_: int = add v129_ v131_;
  v111_: int = id v132_;
  v104_: int = id v111_;
  jmp .b105_;
.b76_:
  v133_: bool = eq c1_ v65_;
  br v133_ .b134_ .b135_;
.b134_:
  v136_: int = call @fac c1_;
  v137_: int = id c1_;
  v74_: int = id v137_;
  v77_: int = id v65_;
  v67_: int = id v77_;
  jmp .b68_;
.b135_:
  c138_: int = const -1;
  v139_: int = call @fac c138_;
  c140_: int = const -2;
  v141_: int = call @fac c140_;
  v142_: int = add v139_ v141_;
  v137_: int = id v142_;
  v74_: int = id v137_;
  v77_: int = id v65_;
  v67_: int = id v77_;
  jmp .b68_;
.b72_:
  v143_: int = sub v65_ c3_;
  v144_: bool = eq c1_ v143_;
  v145_: int = id c3_;
  br v144_ .b146_ .b147_;
.b147_:
  v148_: bool = eq c3_ v143_;
  br v148_ .b149_ .b150_;
.b149_:
  v151_: int = call @fac c1_;
  v152_: int = id v143_;
  v145_: int = id v152_;
.b146_:
  v153_: int = sub v143_ c3_;
  v154_: bool = eq c1_ v153_;
  v155_: int = id c3_;
  br v154_ .b156_ .b157_;
.b157_:
  v158_: bool = eq c3_ v153_;
  br v158_ .b159_ .b160_;
.b159_:
  v161_: int = call @fac c1_;
  v162_: int = id v153_;
  v155_: int = id v162_;
.b156_:
  v163_: int = add v145_ v155_;
  v77_: int = id v163_;
  v67_: int = id v77_;
  jmp .b68_;
.b160_:
  v164_: int = sub v153_ c3_;
  v165_: int = call @fac v164_;
  v166_: int = sub v164_ c3_;
  v167_: int = call @fac v166_;
  v168_: int = add v165_ v167_;
  v162_: int = id v168_;
  v155_: int = id v162_;
  jmp .b156_;
.b150_:
  v169_: int = sub v143_ c3_;
  v170_: int = call @fac v169_;
  v171_: int = sub v169_ c3_;
  v172_: int = call @fac v171_;
  v173_: int = add v170_ v172_;
  v152_: int = id v173_;
  v145_: int = id v152_;
  jmp .b146_;
.b7_:
}
@main {
  c0_: int = const 2;
  c1_: int = const 0;
  v2_: bool = eq c0_ c1_;
  c3_: int = const 1;
  v4_: int = id c3_;
  br v2_ .b5_ .b6_;
.b5_:
  print v4_;
  ret;
  jmp .b7_;
.b6_:
  v8_: bool = eq c0_ c3_;
  br v8_ .b9_ .b10_;
.b9_:
  v11_: bool = eq c1_ c1_;
  c12_: int = const 1;
  v13_: int = id c12_;
  br v11_ .b14_ .b15_;
.b14_:
  v16_: int = id c0_;
  v4_: int = id v16_;
  print v4_;
  ret;
  jmp .b7_;
.b15_:
  v17_: bool = eq c12_ c1_;
  br v17_ .b18_ .b19_;
.b18_:
  v20_: int = call @fac c1_;
  v21_: int = id c1_;
  v13_: int = id v21_;
  v16_: int = id c0_;
  v4_: int = id v16_;
  print v4_;
  ret;
  jmp .b7_;
.b19_:
  c22_: int = const -1;
  v23_: int = call @fac c22_;
  c24_: int = const -2;
  v25_: int = call @fac c24_;
  v26_: int = add v23_ v25_;
  v21_: int = id v26_;
  v13_: int = id v21_;
  v16_: int = id c0_;
  v4_: int = id v16_;
  print v4_;
  ret;
  jmp .b7_;
.b10_:
  v27_: bool = eq c1_ c3_;
  v28_: int = id c1_;
  br v27_ .b29_ .b30_;
.b30_:
  v31_: bool = eq c3_ c3_;
  br v31_ .b32_ .b33_;
.b32_:
  v34_: int = call @fac c1_;
  v35_: int = id c3_;
  v28_: int = id v35_;
.b29_:
  v36_: bool = eq c1_ c1_;
  v37_: int = id c3_;
  br v36_ .b38_ .b39_;
.b38_:
  v40_: int = add v28_ v37_;
  v16_: int = id v40_;
  v4_: int = id v16_;
  print v4_;
  ret;
  jmp .b7_;
.b39_:
  v41_: bool = eq c1_ c3_;
  br v41_ .b42_ .b43_;
.b42_:
  v44_: int = call @fac c3_;
  v45_: int = id c3_;
  v37_: int = id v45_;
  v40_: int = add v28_ v37_;
  v16_: int = id v40_;
  v4_: int = id v16_;
  print v4_;
  ret;
  jmp .b7_;
.b43_:
  c46_: int = const -1;
  v47_: int = call @fac c46_;
  c48_: int = const -2;
  v49_: int = call @fac c48_;
  v50_: int = add v47_ v49_;
  v45_: int = id v50_;
  v37_: int = id v45_;
  v40_: int = add v28_ v37_;
  v16_: int = id v40_;
  v4_: int = id v16_;
  print v4_;
  ret;
  jmp .b7_;
.b33_:
  v51_: int = call @fac c1_;
  c52_: int = const -1;
  v53_: int = call @fac c52_;
  v54_: int = add v51_ v53_;
  v35_: int = id v54_;
  v28_: int = id v35_;
  jmp .b29_;
.b7_:
}
