tests/snapshots/files__fib_shape-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main(v0: int) {
.b1_:
  c2_: int = const 0;
  c3_: int = const 1;
  v4_: int = id c2_;
  v5_: int = id c3_;
  v6_: int = id v0;
.b7_:
  v8_: bool = lt v4_ v6_;
  v9_: int = id v4_;
  v10_: int = id v5_;
  v11_: int = id v6_;
  br v8_ .b12_ .b13_;
.b12_:
  v14_: int = add v4_ v5_;
  v9_: int = id v14_;
  v10_: int = id v5_;
  v11_: int = id v6_;
.b13_:
  v4_: int = id v9_;
  v5_: int = id v10_;
  v6_: int = id v11_;
  br v8_ .b7_ .b15_;
.b15_:
  print v4_;
}
