tests/snapshots/files__fib_shape-rvsdg-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main(v0: int) {
  jmp .__2__;
.__341__:
  jmp .__342__;
.__340__:
  v178: int = id v228;
  v179: int = id v261;
  v180: int = id v293;
  br v338 .__182__ .__341__;
.__339__:
  v337: int = const 1;
  v338: bool = eq v322 v337;
  jmp .__340__;
.__336__:
  jmp .__339__;
.__325__:
  v321: int = id v178;
  v322: int = id v317;
  v323: int = id v179;
  v324: int = id v180;
  jmp .__336__;
.__320__:
  jmp .__325__;
.__319__:
  jmp .__320__;
.__318__:
  v317: int = const 0;
  jmp .__319__;
.__316__:
  jmp .__318__;
.__315__:
  jmp .__316__;
.__335__:
  v321: int = id v329;
  v322: int = id v331;
  v323: int = id v179;
  v324: int = id v180;
  jmp .__336__;
.__334__:
  jmp .__335__;
.__333__:
  jmp .__334__;
.__332__:
  v331: int = const 1;
  jmp .__333__;
.__330__:
  v329: int = add v178 v179;
  jmp .__332__;
.__328__:
  jmp .__330__;
.__327__:
  jmp .__328__;
.__326__:
  jmp .__327__;
.__314__:
  br v308 .__326__ .__315__;
.__313__:
  jmp .__314__;
.__312__:
  jmp .__313__;
.__311__:
  jmp .__312__;
.__310__:
  jmp .__311__;
.__309__:
  v308: bool = lt v178 v180;
  jmp .__310__;
.__307__:
  jmp .__309__;
.__306__:
  jmp .__307__;
.__305__:
  jmp .__306__;
.__294__:
  v290: int = id v178;
  v291: int = id v286;
  v292: int = id v179;
  v293: int = id v180;
  jmp .__305__;
.__289__:
  jmp .__294__;
.__288__:
  jmp .__289__;
.__287__:
  v286: int = const 0;
  jmp .__288__;
.__285__:
  jmp .__287__;
.__284__:
  jmp .__285__;
.__304__:
  v290: int = id v298;
  v291: int = id v300;
  v292: int = id v179;
  v293: int = id v180;
  jmp .__305__;
.__303__:
  jmp .__304__;
.__302__:
  jmp .__303__;
.__301__:
  v300: int = const 1;
  jmp .__302__;
.__299__:
  v298: int = add v178 v179;
  jmp .__301__;
.__297__:
  jmp .__299__;
.__296__:
  jmp .__297__;
.__295__:
  jmp .__296__;
.__283__:
  br v277 .__295__ .__284__;
.__282__:
  jmp .__283__;
.__281__:
  jmp .__282__;
.__280__:
  jmp .__281__;
.__279__:
  jmp .__280__;
.__278__:
  v277: bool = lt v178 v180;
  jmp .__279__;
.__276__:
  jmp .__278__;
.__275__:
  jmp .__276__;
.__274__:
  jmp .__275__;
.__263__:
  v259: int = id v178;
  v260: int = id v255;
  v261: int = id v179;
  v262: int = id v180;
  jmp .__274__;
.__258__:
  jmp .__263__;
.__257__:
  jmp .__258__;
.__256__:
  v255: int = const 0;
  jmp .__257__;
.__254__:
  jmp .__256__;
.__253__:
  jmp .__254__;
.__273__:
  v259: int = id v267;
  v260: int = id v269;
  v261: int = id v179;
  v262: int = id v180;
  jmp .__274__;
.__272__:
  jmp .__273__;
.__271__:
  jmp .__272__;
.__270__:
  v269: int = const 1;
  jmp .__271__;
.__268__:
  v267: int = add v178 v179;
  jmp .__270__;
.__266__:
  jmp .__268__;
.__265__:
  jmp .__266__;
.__264__:
  jmp .__265__;
.__252__:
  br v246 .__264__ .__253__;
.__251__:
  jmp .__252__;
.__250__:
  jmp .__251__;
.__249__:
  jmp .__250__;
.__248__:
  jmp .__249__;
.__247__:
  v246: bool = lt v178 v180;
  jmp .__248__;
.__245__:
  jmp .__247__;
.__244__:
  jmp .__245__;
.__243__:
  jmp .__244__;
.__232__:
  v228: int = id v178;
  v229: int = id v224;
  v230: int = id v179;
  v231: int = id v180;
  jmp .__243__;
.__227__:
  jmp .__232__;
.__226__:
  jmp .__227__;
.__225__:
  v224: int = const 0;
  jmp .__226__;
.__223__:
  jmp .__225__;
.__222__:
  jmp .__223__;
.__242__:
  v228: int = id v236;
  v229: int = id v238;
  v230: int = id v179;
  v231: int = id v180;
  jmp .__243__;
.__241__:
  jmp .__242__;
.__240__:
  jmp .__241__;
.__239__:
  v238: int = const 1;
  jmp .__240__;
.__237__:
  v236: int = add v178 v179;
  jmp .__239__;
.__235__:
  jmp .__237__;
.__234__:
  jmp .__235__;
.__233__:
  jmp .__234__;
.__221__:
  br v215 .__233__ .__222__;
.__220__:
  jmp .__221__;
.__219__:
  jmp .__220__;
.__218__:
  jmp .__219__;
.__217__:
  jmp .__218__;
.__216__:
  v215: bool = lt v178 v180;
  jmp .__217__;
.__214__:
  jmp .__216__;
.__213__:
  jmp .__214__;
.__212__:
  jmp .__213__;
.__201__:
  v197: int = id v178;
  v198: int = id v193;
  v199: int = id v179;
  v200: int = id v180;
  jmp .__212__;
.__196__:
  jmp .__201__;
.__195__:
  jmp .__196__;
.__194__:
  v193: int = const 0;
  jmp .__195__;
.__192__:
  jmp .__194__;
.__191__:
  jmp .__192__;
.__211__:
  v197: int = id v205;
  v198: int = id v207;
  v199: int = id v179;
  v200: int = id v180;
  jmp .__212__;
.__210__:
  jmp .__211__;
.__209__:
  jmp .__210__;
.__208__:
  v207: int = const 1;
  jmp .__209__;
.__206__:
  v205: int = add v178 v179;
  jmp .__208__;
.__204__:
  jmp .__206__;
.__203__:
  jmp .__204__;
.__202__:
  jmp .__203__;
.__190__:
  br v184 .__202__ .__191__;
.__189__:
  jmp .__190__;
.__188__:
  jmp .__189__;
.__187__:
  jmp .__188__;
.__186__:
  jmp .__187__;
.__185__:
  v184: bool = lt v178 v180;
  jmp .__186__;
.__183__:
  jmp .__185__;
.__182__:
  jmp .__183__;
.__181__:
  v178: int = id v173;
  v179: int = id v175;
  v180: int = id v0;
  jmp .__182__;
.__177__:
  jmp .__181__;
.__176__:
  v175: int = const 1;
  jmp .__177__;
.__174__:
  v173: int = const 0;
  jmp .__176__;
.__172__:
  jmp .__174__;
.__171__:
  jmp .__172__;
.__170__:
  v8: int = id v58;
  v9: int = id v91;
  v10: int = id v123;
  br v168 .__12__ .__171__;
.__169__:
  v167: int = const 1;
  v168: bool = eq v152 v167;
  jmp .__170__;
.__166__:
  jmp .__169__;
.__155__:
  v151: int = id v8;
  v152: int = id v147;
  v153: int = id v9;
  v154: int = id v10;
  jmp .__166__;
.__150__:
  jmp .__155__;
.__149__:
  jmp .__150__;
.__148__:
  v147: int = const 0;
  jmp .__149__;
.__146__:
  jmp .__148__;
.__145__:
  jmp .__146__;
.__165__:
  v151: int = id v159;
  v152: int = id v161;
  v153: int = id v9;
  v154: int = id v10;
  jmp .__166__;
.__164__:
  jmp .__165__;
.__163__:
  jmp .__164__;
.__162__:
  v161: int = const 1;
  jmp .__163__;
.__160__:
  v159: int = add v8 v9;
  jmp .__162__;
.__158__:
  jmp .__160__;
.__157__:
  jmp .__158__;
.__156__:
  jmp .__157__;
.__144__:
  br v138 .__156__ .__145__;
.__143__:
  jmp .__144__;
.__142__:
  jmp .__143__;
.__141__:
  jmp .__142__;
.__140__:
  jmp .__141__;
.__139__:
  v138: bool = lt v8 v10;
  jmp .__140__;
.__137__:
  jmp .__139__;
.__136__:
  jmp .__137__;
.__135__:
  jmp .__136__;
.__124__:
  v120: int = id v8;
  v121: int = id v116;
  v122: int = id v9;
  v123: int = id v10;
  jmp .__135__;
.__119__:
  jmp .__124__;
.__118__:
  jmp .__119__;
.__117__:
  v116: int = const 0;
  jmp .__118__;
.__115__:
  jmp .__117__;
.__114__:
  jmp .__115__;
.__134__:
  v120: int = id v128;
  v121: int = id v130;
  v122: int = id v9;
  v123: int = id v10;
  jmp .__135__;
.__133__:
  jmp .__134__;
.__132__:
  jmp .__133__;
.__131__:
  v130: int = const 1;
  jmp .__132__;
.__129__:
  v128: int = add v8 v9;
  jmp .__131__;
.__127__:
  jmp .__129__;
.__126__:
  jmp .__127__;
.__125__:
  jmp .__126__;
.__113__:
  br v107 .__125__ .__114__;
.__112__:
  jmp .__113__;
.__111__:
  jmp .__112__;
.__110__:
  jmp .__111__;
.__109__:
  jmp .__110__;
.__108__:
  v107: bool = lt v8 v10;
  jmp .__109__;
.__106__:
  jmp .__108__;
.__105__:
  jmp .__106__;
.__104__:
  jmp .__105__;
.__93__:
  v89: int = id v8;
  v90: int = id v85;
  v91: int = id v9;
  v92: int = id v10;
  jmp .__104__;
.__88__:
  jmp .__93__;
.__87__:
  jmp .__88__;
.__86__:
  v85: int = const 0;
  jmp .__87__;
.__84__:
  jmp .__86__;
.__83__:
  jmp .__84__;
.__103__:
  v89: int = id v97;
  v90: int = id v99;
  v91: int = id v9;
  v92: int = id v10;
  jmp .__104__;
.__102__:
  jmp .__103__;
.__101__:
  jmp .__102__;
.__100__:
  v99: int = const 1;
  jmp .__101__;
.__98__:
  v97: int = add v8 v9;
  jmp .__100__;
.__96__:
  jmp .__98__;
.__95__:
  jmp .__96__;
.__94__:
  jmp .__95__;
.__82__:
  br v76 .__94__ .__83__;
.__81__:
  jmp .__82__;
.__80__:
  jmp .__81__;
.__79__:
  jmp .__80__;
.__78__:
  jmp .__79__;
.__77__:
  v76: bool = lt v8 v10;
  jmp .__78__;
.__75__:
  jmp .__77__;
.__74__:
  jmp .__75__;
.__73__:
  jmp .__74__;
.__62__:
  v58: int = id v8;
  v59: int = id v54;
  v60: int = id v9;
  v61: int = id v10;
  jmp .__73__;
.__57__:
  jmp .__62__;
.__56__:
  jmp .__57__;
.__55__:
  v54: int = const 0;
  jmp .__56__;
.__53__:
  jmp .__55__;
.__52__:
  jmp .__53__;
.__72__:
  v58: int = id v66;
  v59: int = id v68;
  v60: int = id v9;
  v61: int = id v10;
  jmp .__73__;
.__71__:
  jmp .__72__;
.__70__:
  jmp .__71__;
.__69__:
  v68: int = const 1;
  jmp .__70__;
.__67__:
  v66: int = add v8 v9;
  jmp .__69__;
.__65__:
  jmp .__67__;
.__64__:
  jmp .__65__;
.__63__:
  jmp .__64__;
.__51__:
  br v45 .__63__ .__52__;
.__50__:
  jmp .__51__;
.__49__:
  jmp .__50__;
.__48__:
  jmp .__49__;
.__47__:
  jmp .__48__;
.__46__:
  v45: bool = lt v8 v10;
  jmp .__47__;
.__44__:
  jmp .__46__;
.__43__:
  jmp .__44__;
.__42__:
  jmp .__43__;
.__31__:
  v27: int = id v8;
  v28: int = id v23;
  v29: int = id v9;
  v30: int = id v10;
  jmp .__42__;
.__26__:
  jmp .__31__;
.__25__:
  jmp .__26__;
.__24__:
  v23: int = const 0;
  jmp .__25__;
.__22__:
  jmp .__24__;
.__21__:
  jmp .__22__;
.__41__:
  v27: int = id v35;
  v28: int = id v37;
  v29: int = id v9;
  v30: int = id v10;
  jmp .__42__;
.__40__:
  jmp .__41__;
.__39__:
  jmp .__40__;
.__38__:
  v37: int = const 1;
  jmp .__39__;
.__36__:
  v35: int = add v8 v9;
  jmp .__38__;
.__34__:
  jmp .__36__;
.__33__:
  jmp .__34__;
.__32__:
  jmp .__33__;
.__20__:
  br v14 .__32__ .__21__;
.__19__:
  jmp .__20__;
.__18__:
  jmp .__19__;
.__17__:
  jmp .__18__;
.__16__:
  jmp .__17__;
.__15__:
  v14: bool = lt v8 v10;
  jmp .__16__;
.__13__:
  jmp .__15__;
.__12__:
  jmp .__13__;
.__11__:
  v8: int = id v3;
  v9: int = id v5;
  v10: int = id v0;
  jmp .__12__;
.__7__:
  jmp .__11__;
.__6__:
  v5: int = const 1;
  jmp .__7__;
.__4__:
  v3: int = const 0;
  jmp .__6__;
.__2__:
  jmp .__4__;
.__342__:
  print v8;
}

