tests/snapshots/files__fib_shape-structured.snap
---
source: tests/files.rs
expression: visualization.result
---
main {
block:
 one: int = const 1;
 i: int = const 0;
while true:
 block:
  block:
   cond: bool = lt i input;
   if cond:
    break 2
   else:

  block:
   donebody: int = const 1;
   print i;
   return

 i: int = add i one;
 bodyvar: int = const 1;
}
