tests/snapshots/files__flatten_loop-structured.snap
---
source: tests/files.rs
expression: visualization.result
---
main {
block:
 one: int = const 1;
 i: int = const 0;
while true:
 block:
  block:
   cond: bool = lt i N;
   if cond:
    break 2
   else:

  block:
   print i;
   return

 block:
  j: int = const 0;
 while true:
  block:
   block:
    cond: bool = lt j M;
    if cond:
     break 2
    else:

   i: int = add i one;
   break 3
  i_times_m: int = mul i M;
  plus_j: int = add i_times_m j;
  print plus_j;
  j: int = add j one;
}
