tests/snapshots/files__gamma_condition_and-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 1
@main(v0: int) {
  c1_: int = const 0;
  v2_: bool = lt v0 c1_;
  v3_: bool = gt v0 c1_;
  v4_: bool = and v2_ v3_;
  c5_: int = const 1;
  v6_: int = id c5_;
  br v4_ .b7_ .b8_;
.b7_:
  print v6_;
  ret;
  jmp .b9_;
.b8_:
  v10_: bool = lt v0 c1_;
  v11_: bool = gt v0 c1_;
  v12_: bool = and v10_ v11_;
  c13_: int = const 3;
  v14_: int = id c13_;
  br v12_ .b15_ .b16_;
.b15_:
  c17_: int = const 2;
  v18_: int = id c17_;
  v19_: int = id c1_;
  v20_: int = id c5_;
.b21_:
  v22_: int = add v18_ v20_;
  v23_: bool = gt v22_ v19_;
  v24_: bool = not v23_;
  v18_: int = id v22_;
  v25_: int = id v19_;
  v26_: int = id v20_;
  v19_: int = id v25_;
  v20_: int = id v26_;
  br v24_ .b21_ .b27_;
.b27_:
  v14_: int = id v18_;
  v6_: int = id v14_;
  print v6_;
  ret;
  jmp .b9_;
.b16_:
  v6_: int = id v14_;
  print v6_;
  ret;
.b9_:
}
