tests/snapshots/files__gamma_condition_and-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 1
@main(v0: int) {
  c1_: int = const 3;
  c2_: int = const 0;
  v3_: bool = lt v0 c2_;
  c4_: int = const 3;
  v5_: int = id c4_;
  br v3_ .b6_ .b7_;
.b6_:
  c8_: int = const 3;
  v5_: int = id c8_;
  print c1_;
  ret;
  jmp .b9_;
.b7_:
  print c1_;
  ret;
.b9_:
}
