tests/snapshots/files__gamma_pull_in-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 1
@main(v0: int) {
.b1_:
  c2_: int = const 10;
  v3_: bool = lt v0 c2_;
  c4_: int = const 3;
  v5_: int = id c4_;
  br v3_ .b6_ .b7_;
.b6_:
  c8_: int = const 2;
  v5_: int = id c8_;
.b7_:
  v9_: int = add v5_ v5_;
  print v9_;
}
